--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "sitepoint front end test",
   "main": "index.js",
   "scripts": {
-    "start" : "node index.js"
+    "start": "node server.js",
+    "build": "webpack --display-error-details --progress --colors --mode=production",
+    "watch": "webpack --display-error-details --progress --colors --watch --mode=development"
   },
   "keywords": [
     "sitepoint"
@@ -16,6 +18,21 @@
     "compression": "^1.3.0",
     "express": "^4.11.0",
     "lodash": "^2.4.1",
-    "morgan": "^1.5.1"
+    "morgan": "^1.5.1",
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.1.0",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.2",
+    "css-loader": "^1.0.0",
+    "mini-css-extract-plugin": "^0.4.3",
+    "node-sass": "^4.9.3",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.0",
+    "webpack": "^4.19.1",
+    "webpack-cli": "^3.1.1"
   }
 }
