--- a/package.json
+++ b/package.json
@@ -14,28 +14,33 @@
   "author": "orodio",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "body-parser": "^1.10.1",
     "compression": "^1.3.0",
     "express": "^4.11.0",
     "lodash": "^2.4.1",
     "morgan": "^1.5.1",
     "react": "^16.5.2",
-    "react-dom": "^16.5.2"
+    "react-dom": "^16.5.2",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.1.0",
+    "@babel/plugin-transform-runtime": "^7.1.0",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
+    "@babel/runtime": "^7.0.0",
     "babel-loader": "^8.0.2",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "css-loader": "^1.0.0",
+    "install": "^0.12.1",
     "mini-css-extract-plugin": "^0.4.3",
     "node-sass": "^4.9.3",
+    "npm": "^6.4.1",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.0",
-    "uuid": "^3.3.2",
     "webpack": "^4.19.1",
     "webpack-cli": "^3.1.1"
   }
