--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.18.0",
+    "bloomer": "^0.6.3",
     "body-parser": "^1.10.1",
+    "bulma": "^0.7.1",
     "compression": "^1.3.0",
     "express": "^4.11.0",
     "lodash": "^2.4.1",
