--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "babel-loader": "^8.0.2",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "css-loader": "^1.0.0",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
     "install": "^0.12.1",
     "mini-css-extract-plugin": "^0.4.3",
     "node-sass": "^4.9.3",
